feat: toggle menu functinality

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     />
   </head>
   <body>
-    <header class="header">
+    <section class="header">
       <nav>
         <a href="index.html"><img src="assets/logo.png" /></a>
-        <div class="nav-links">
+        <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="">Home</a></li>
@@ -42,6 +42,18 @@
         </p>
         <a href="" class="hero-btn">Visit Us To Know More</a>
       </div>
-    </header>
+    </section>
+
+    <!-- JavaScript for Toggle Menu -->
+    <script>
+      var navLinks = document.getElementById("navLinks");
+
+      function showMenu() {
+        navLinks.style.right = "0";
+      }
+      function hideMenu() {
+        navLinks.style.right = "-200px";
+      }
+    </script>
   </body>
 </html>
