--- a/index.html
+++ b/index.html
@@ -44,6 +44,43 @@
       </div>
     </section>
 
+    <!-- projects -->
+
+    <section class="projects">
+      <h1>Projects</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+      <div class="row">
+        <div class="project-col">
+          <h3>Project 1</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
+            explicabo possimus sint? Quam explicabo possimus sint? Quam pariatur
+            fugiat explicabo possimus sint?
+          </p>
+        </div>
+        <div class="project-col">
+          <h3>Project 2</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
+            explicabo possimus sint? Quam explicabo possimus sint? Quam pariatur
+            fugiat explicabo possimus sint?
+          </p>
+        </div>
+        <div class="project-col">
+          <h3>Project 3</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
+            explicabo possimus sint? Quam explicabo possimus sint? Quam pariatur
+            fugiat explicabo possimus sint?
+          </p>
+        </div>
+      </div>
+    </section>
+    
+
     <!-- JavaScript for Toggle Menu -->
     <script>
       var navLinks = document.getElementById("navLinks");
