fix: changed project section to services

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
     <!-- projects -->
 
-    <section class="projects">
+    <section class="services">
       <h1>Projects</h1>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
       <div class="row">
-        <div class="project-col">
-          <h3>Project 1</h3>
+        <div class="service-col">
+          <h3>Service 1</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
             pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
@@ -59,8 +59,8 @@
             fugiat explicabo possimus sint?
           </p>
         </div>
-        <div class="project-col">
-          <h3>Project 2</h3>
+        <div class="service-col">
+          <h3>Service 2</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
             pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
@@ -68,8 +68,8 @@
             fugiat explicabo possimus sint?
           </p>
         </div>
-        <div class="project-col">
-          <h3>Project 3</h3>
+        <div class="service-col">
+          <h3>Service 3</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
             pariatur fugiat explicabo possimus sint? Quam pariatur fugiat
@@ -79,7 +79,8 @@
         </div>
       </div>
     </section>
-    
+
+    <!--  -->
 
     <!-- JavaScript for Toggle Menu -->
     <script>
