feat: projects section

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </div>
     </section>
 
-    <!-- projects -->
+    <!-- Services -->
 
     <section class="services">
-      <h1>Projects</h1>
+      <h1>Our Services</h1>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
       <div class="row">
         <div class="service-col">
@@ -80,7 +80,33 @@
       </div>
     </section>
 
-    <!--  -->
+    <!-- Projects -->
+
+    <section class="projects">
+      <h1>Our Projects</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+
+      <div class="row">
+        <div class="project-col">
+          <img src="assets/london.png" />
+          <div class="layer">
+            <h3>London</h3>
+          </div>
+        </div>
+        <div class="project-col">
+          <img src="assets/newyork.png" />
+          <div class="layer">
+            <h3>NEW YORK</h3>
+          </div>
+        </div>
+        <div class="project-col">
+          <img src="assets/washington.png" />
+          <div class="layer">
+            <h3>WASHINGTON</h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- JavaScript for Toggle Menu -->
     <script>
