feat: proccess section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,43 @@
       </div>
     </section>
 
+    <!-- Process -->
+
+    <section class="processes">
+      <h1>Our Process</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+
+      <div class="row">
+        <div class="process-col">
+          <img src="assets/library.png" />
+          <h3>Start</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
+            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
+            expedita!
+          </p>
+        </div>
+        <div class="process-col">
+          <img src="assets/basketball.png" />
+          <h3>halfway</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
+            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
+            expedita!
+          </p>
+        </div>
+        <div class="process-col">
+          <img src="assets/cafeteria.png" />
+          <h3>finish</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
+            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
+            expedita!
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- JavaScript for Toggle Menu -->
     <script>
       var navLinks = document.getElementById("navLinks");
