--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
   <body>
@@ -141,6 +141,47 @@
             modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
             expedita!
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- testimonials -->
+
+    <section class="testimonials">
+      <h1>What our clients say!</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+      <div class="row">
+        <div class="testimonial-col">
+          <img src="assets/user1.jpg" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+              saepe, accusantium neque reiciendis ea doloribus adipisci vel
+              numquam aliquam amet, at dolorum architecto.?
+            </p>
+            <h3>Christine Berkley</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-o"></i>
+          </div>
+        </div>
+        <div class="testimonial-col">
+          <img src="assets/user2.jpg" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+              saepe, accusantium neque reiciendis ea doloribus adipisci vel
+              numquam aliquam amet, at dolorum architecto.?
+            </p>
+            <h3>David Byer</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+          </div>
         </div>
       </div>
     </section>
