feat: call to action section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
       </div>
     </section>
 
+    <!-- Call To Action -->
+
+    <section class="cta">
+      <h1>Contact us</h1>
+      <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+
     <!-- JavaScript for Toggle Menu -->
     <script>
       var navLinks = document.getElementById("navLinks");
