--- a/index.html
+++ b/index.html
@@ -193,6 +193,24 @@
       <a href="" class="hero-btn">CONTACT US</a>
     </section>
 
+    <!-- Footer -->
+
+    <section class="footer">
+      <h4>About Us</h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+        facilis voluptas ab autem fugit, <br />
+        asperiores dolore. Natus, maxime quidem, labore hic dolores deleniti
+        facilis non, sed id cum rem.
+      </p>
+      <div class="icon">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-linkedin"></i>
+      </div>
+      <p>Made with <i class="fa fa-heart-o"></i> by Reza Naeim - Future Web</p>
+    </section>
+
     <!-- JavaScript for Toggle Menu -->
     <script>
       var navLinks = document.getElementById("navLinks");
