feat: projects page

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <section class="header">
+    <section class="sub-header">
       <nav>
         <a href="index.html"><img src="assets/logo.png" /></a>
         <div class="nav-links" id="navLinks">
@@ -31,18 +31,10 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-
-      <div class="text-box">
-        <h1>Flora's Architecture</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, esse
-          ipsam nihil repellendus cumque quo dicta, harum quaerat dolorum, ut
-          enim mollitia. Dolores,<br />
-          Vitae voluptas excepturi suscipit quod nostrum!
-        </p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
-      </div>
+      <h1>Our Projects</h1>
     </section>
+
+    <!--------- Projects ----------->
 
     <!-- Services -->
 
@@ -106,91 +98,6 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <!-- Process -->
-
-    <section class="processes">
-      <h1>Our Process</h1>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-
-      <div class="row">
-        <div class="process-col">
-          <img src="assets/library.png" />
-          <h3>Start</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
-            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
-            expedita!
-          </p>
-        </div>
-        <div class="process-col">
-          <img src="assets/basketball.png" />
-          <h3>halfway</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
-            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
-            expedita!
-          </p>
-        </div>
-        <div class="process-col">
-          <img src="assets/cafeteria.png" />
-          <h3>finish</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veniam
-            modi repellat sunt odit nulla! Sint dolor tenetur dignissimos
-            expedita!
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- testimonials -->
-
-    <section class="testimonials">
-      <h1>What our clients say!</h1>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-      <div class="row">
-        <div class="testimonial-col">
-          <img src="assets/user1.jpg" />
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-              saepe, accusantium neque reiciendis ea doloribus adipisci vel
-              numquam aliquam amet, at dolorum architecto.?
-            </p>
-            <h3>Christine Berkley</h3>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-o"></i>
-          </div>
-        </div>
-        <div class="testimonial-col">
-          <img src="assets/user2.jpg" />
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-              saepe, accusantium neque reiciendis ea doloribus adipisci vel
-              numquam aliquam amet, at dolorum architecto.?
-            </p>
-            <h3>David Byer</h3>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-o"></i>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Call To Action -->
-
-    <section class="cta">
-      <h1>Contact us</h1>
-      <a href="" class="hero-btn">CONTACT US</a>
     </section>
 
     <!-- Footer -->
