feat: contact page

--- a/contact.html
+++ b/contact.html
@@ -30,25 +30,44 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About Us</h1>
+      <h1>Contact Us</h1>
     </section>
 
-    <!--------- about us content ----------->
+    <!-- --------- Contact Us --------- -->
 
-    <section class="about-us">
+    <section class="contact-us">
       <div class="row">
-        <div class="about-col">
-          <h1>We are the world's largest designer team</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
-            recusandae consectetur, consequatur eius in incidunt maxime, modi
-            architecto esse sapiente voluptas quas aspernatur quidem obcaecati
-            sunt ipsum! In, laudantium aut.
-          </p>
-          <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+        <div class="contact-col">
+          <div>
+            <i class="fa fa-home"></i>
+            <span>
+              <h5>XYZ Road, ABC Building</h5>
+              <p>Bangalore, Karnataka IN</p>
+            </span>
+          </div>
+          <div>
+            <i class="fa fa-phone"></i>
+            <span>
+              <h5>+1 123456789</h5>
+              <p>Bangalore, Karnataka IN</p>
+            </span>
+          </div>
+          <div>
+            <i class="fa fa-envelope-o"></i>
+            <span>
+              <h5>info@flora.com</h5>
+              <p>Email us your requests</p>
+            </span>
+          </div>
         </div>
-        <div class="about-col">
-          <img src="assets/about.jpg" />
+        <div class="contact-col">
+          <form action="">
+            <input type="text" placeholder="Enter your name" required />
+            <input type="email" placeholder="Enter email address" required />
+            <input type="text" placeholder="Enter your subject" required />
+            <textarea rows="8" placeholder="Message" required></textarea>
+            <button type="submit" class="hero-btn red-btn">Send Message</button>
+          </form>
         </div>
       </div>
     </section>
