--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Content</a></li>
+            <li><a href="contact.html">Content</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
